--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="./images/icon.gif" />
     <link rel="apple-touch-startup-image" href="./images/icon.gif">
 
-    <title>Calories Detector</title>
+    <title>Shazam series</title>
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
@@ -49,7 +49,7 @@
                 justify-content: space-around;
                 flex-wrap: wrap;
                 border-radius: 6px;
-                
+
                 margin : 10px 10px 10px 10px ;
                 box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
                 background: #fff;
@@ -64,7 +64,7 @@
                 justify-content: space-around;
                 flex-wrap: wrap;
                 border-radius: 6px;
-    
+
                 margin : 10px 10px 10px 10px ;
                 box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
                 background: #6ed4c7;
@@ -174,8 +174,8 @@
     <div id="id_wrapper">
 
         <div id="id_header">
-            <span style="width:35px"><img src="./images/icon.gif" width="25px" /></span>
-            <span>Calories Detector</span>
+            <span style="width:35px"><img src="./images/shazam.jpg" width="25px" /></span>
+            <span>Shazam series</span>
         </div>
 
         <div id="id_content">
@@ -203,7 +203,7 @@
 
         <div id="id_footer">
             <span>
-                &copy; Copyright. Thin Tech HK
+                &copy; Copyright. Patrice de Saint Steban
             </span>
         </div>
 
